package com.data_management;

import java.io.IOException;

public interface DataReader {
    /**
     * Reads data from a specified source and stores it in the data storage.
     * 
     * @param dataStorage the storage where data will be stored
     * @throws IOException if there is an error reading the data
     */
    void readData(DataStorage dataStorage) throws IOException;
}

// DataReader: Defines the contract for classes that will read and parse data generated by the HealthDataSimulator.
// Implementations of this interface should be capable of reading data from the simulator’s output and storing it in the DataStorage object.
